@@ -169,6 +169,10 @@ Changes include:
   Linux, joystick: fix invalid coef when axis&nbsp;min &gt; axis&nbsp;max.
 </P>
 <P>
+  Linux, joystick: remove deadzone and output axis values in correct
+  range (bug <a href="https://bugzilla.libsdl.org/show_bug.cgi?id=5241">5241</a>.)
+</P>
+<P>
   Linux, joystick: enhance detection of gamepads.
 </P>
 <P>
